# SolveChain

./: README.md  ai_agent.py  create_sample_pdf.py  example_flag.txt  explanation.py  main.py  preprocessing.py  pyproject.toml  solver.py  test_forensic_pdf_challenge.py  test_tools_ctf_scenarios.py  webapp.py
ai_ctf_solver.egg-info/: PKG-INFO  SOURCES.txt
core/: __init__.py  agent.py  memory.py  orchestrator.py
logs/: corrupted_auto_solved.json  corrupted_fixed_run.json  corrupted_retry.json  run.json
tools/: __init__.py  base.py  builtin_tools.py  echo_tool.py  engine.py  read_file_tool.py  registry.py  submit_flag_tool.py
utils/: file_utils.py  regex_utils.py
web/: app.css  app.js  index.html
