[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ctf-solver"
version = "0.1.0"
description = "Modular Python project scaffold for an AI-powered CTF solver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyPDF2>=3.0.0", "Pillow>=10.0.0"]

[tool.setuptools]
py-modules = ["main"]
